2003-09-26  JP Rosevear <jpr@ximian.com>

	* pcs/cal-backend.c (cal_backend_class_init): remove cal_added
	signal

2003-09-26  JP Rosevear <jpr@ximian.com>

	* pcs/cal.h: add protos

	* pcs/cal.c (cal_get_backend): accessor
	(cal_get_listener): ditto

	* pcs/cal-factory.c (impl_CalFactory_getCal): update to new
	routine name

	* pcs/cal-backend.h: add protos
	
	* pcs/cal-backend.c (cal_backend_init): init client mutex
	(cal_backend_finalize): destroy client mutex
	(cal_destroy_cb): just remove the client
	(listener_died_cb): remove the client, the listener died so it
	can't really do anything
	(last_client_gone): signal the last client gone
	(cal_backend_add_client): add a client with locking and listen for
	the death of the listener
	(cal_backend_remove_client): remove client

2003-09-26  Rodrigo Moya <rodrigo@ximian.com>

	* pcs/cal-backend-sync.c (_cal_backend_create_object): only free the
	returned UID if it's not NULL.

	* pcs/cal.c (cal_notify_object_created): dont send NULL strings to
	ORBit code.

2003-09-26  Rodrigo Moya <rodrigo@ximian.com>

	* gui/comp-util.c (cal_comp_is_on_server): free the icalcomponent
	returned from cal_client_get_object, and return TRUE if we find
	the component on the backend.

	* gui/e-day-view.c (process_component):
	* gui/e-week-view.c (process_component): added missing case, so that
	we also display recurrent meetings starting before the time range and
	ending after the time range.

	* cal-client/cal-listener.c (impl_notifyReadOnly): pass the
	'read_only' argument to the signal callback correctly (a gboolean
	not a 'gboolean *').

	* gui/comp-editor-factory.c (resolve_pending_requests): removed
	the g_assert on 'oc->pending != NULL', since there are now cases
	(local calendar) where we get to call this function (cal_opened_cb)
	with no pending requests yet.

2003-09-25  JP Rosevear <jpr@ximian.com>

	* gui/calendar-commands.c (publish_freebusy_cmd): adapt to new
	get_free_busy api
