@@ -1,3 +1,8 @@
+2003-09-30  Rodrigo Moya <rodrigo@ximian.com>
+
+	* pcs/cal-backend-file.c (match_recurrence_sexp): removed.
+	(match_object_sexp): dont expand recurrences here.
+
 2003-09-26  JP Rosevear <jpr@ximian.com>
 
 	* pcs/cal-backend.c (cal_backend_class_init): remove cal_added
